Update IterationExample.java